--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js"
-
   },
   "keywords": [],
   "author": "",
@@ -13,7 +12,10 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
+    "method-override": "^3.0.0",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9"
   }
